src-ken&y/objects/OTC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Config for OTC</description>
    <fields>
        <fullName>Customer_Credit_Hold_Check_At_Allocate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents allocation if parent customer has a credit hold placed</description>
        <label>Customer Credit Hold Check at Allocate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distance_Rate_Preference_Monthly__c</fullName>
        <inlineHelpText>Distance Rate Preference Monthly</inlineHelpText>
        <label>Distance Preference Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_Rate_Preference_None__c</fullName>
        <inlineHelpText>Distance Rate Preference None</inlineHelpText>
        <label>Distance Preference None</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_Rate_Preference_Quarterly__c</fullName>
        <inlineHelpText>Distance Rate Preference Quarterly</inlineHelpText>
        <label>Distance Preference Quarterly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_Rate_Preference_Weekly__c</fullName>
        <inlineHelpText>Distance Rate Preference Weekly</inlineHelpText>
        <label>Distance Preference Weekly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fuel_Allowance_Preference_Monthly__c</fullName>
        <inlineHelpText>Fuel Allowance Preference Monthly</inlineHelpText>
        <label>Fuel Allowance Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fuel_Allowance_Preference_None__c</fullName>
        <inlineHelpText>Fuel Allowance Preference None</inlineHelpText>
        <label>Fuel Allowance None</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fuel_Allowance_Preference_Quarterly__c</fullName>
        <inlineHelpText>Fuel Allowance Preference Quarterly</inlineHelpText>
        <label>Fuel Allowance Quarterly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fuel_Allowance_Preference_Weekly__c</fullName>
        <inlineHelpText>Fuel Allowance Preference Weekly</inlineHelpText>
        <label>Fuel Allowance Weekly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Lines_for_Sync_order_release__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Max Lines for sync order release</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Level_Freight_Allowances_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If CHECKED, allows Allowance rules to be created at parent customer level only i.e. No two rules can exist with a parent customer and other with child customer.</description>
        <inlineHelpText>If CHECKED, allows Allowance rules to be created at parent customer level only i.e. No two rules can exist with a parent customer and other with child customer.</inlineHelpText>
        <label>Parent Level Freight Allowances Only</label>
        <type>Checkbox</type>
    </fields>
    <label>OTC</label>
</CustomObject>